--- a/style/sta199.scss
+++ b/style/sta199.scss
@@ -70,3 +70,10 @@ $font-family: "Atkinson Hyperlegible", sans-serif;
 div.sourceCode pre.sourceCode {
   background-color: #e9e9e9;
 }
+
+
+.center-table table {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
