--- a/slides/slides.scss
+++ b/slides/slides.scss
@@ -95,3 +95,27 @@ details>summary {
   align-items: center;
   height: 90%;
 }
+
+.reveal .slide .question {
+  border-left: 3px solid #5D737E;
+  padding-left: 0.5em;
+  padding-top: 0.25em;
+  padding-bottom: 0.25em;
+  background: #5D737E50;
+}
+
+.reveal .slide .appex {
+  border-left: 3px solid #BCF4F5;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  padding: 0.5em;
+  background: #BCF4F550;
+}
+
+.reveal .slide .demo {
+  border-left: 3px solid #9AA067;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  padding: 0.5em;
+  background: #9AA06750;
+}
