add sizes commands

--- a/slides/slides.scss
+++ b/slides/slides.scss
@@ -39,6 +39,18 @@ details>summary {
   padding-bottom: 200px;
 }
 
+.xsmall {
+  font-size: 0.6em;
+}
+
+.xxsmall {
+  font-size: 0.5em;
+}
+
+.xxxsmall {
+  font-size: 0.4em;
+}
+
 .small {
   font-size: 0.75em;
 }
